@@ -1,3 +1,7 @@
+2005-12-30  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>
+
+	* w3m.el (w3m-fontify-strike-through): Fix multi `<del>' problem.
+
 2005-12-23  Matt Hodges  <MPHodges@member.fsf.org>
 
 	* w3m-util.el (w3m-list-buffers): Ensure disabling the w3m-fb-mode
